<!--
    Copyright (C) 2015 SpiritCroc
    Email: spiritcroc@gmail.com

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
    <string name="app_name">Sync Settings</string>
    <string name="activity_select_sync">Select account/data</string>
    <string name="activity_select_action">Select action</string>

    <string name="action_select_multiple">Multiple selections</string>
    <string name="action_next">Continue</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_select_all">Select all</string>
    <string name="action_undo_selection">Undo selection</string>
    <string name="action_expand_all">Expand all</string>
    <string name="action_collapse_all">Collapse all</string>
    <string name="action_detailed_information">Detailed</string>

    <string name="enter_shortcut_name">Enter shortcut name:</string>

    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="toggle">Toggle</string>

    <string name="sync_master">Global setting (all accounts)</string>
    <string name="sync_master_on">@string/on</string>
    <string name="sync_master_off">@string/off</string>
    <string name="sync_master_toggle">@string/toggle</string>
    <string name="sync_account">%1$s (%2$s)</string><!-- 1: name, 2: account -->
    <string name="sync_account_detailed">%1$s - %2$s</string>
    <string name="sync_authority_detailed">%1$s (%2$s)</string>
    <string name="sync_add_account">Add account</string>
    <string name="sync_add_account_title">@string/sync_add_account</string>
    <string name="sync_add_account_summary">Starting with Android 8.0, it is no longer possible to view a complete list of available accounts on a device. Instead, it is necessary to grant access to each single account so SyncSettings can see it. Continue to add an account to manage with SyncSettings.</string>
    <string name="sync_add_account_continue">Continue</string>
    <string name="sync_add_account_cancel">Cancel</string>

    <string name="sync_now">Request sync:</string>
    <string name="auto_sync">Auto sync:</string>
    <string name="button_sync_now">If auto sync enabled</string>
    <string name="button_force_sync_now">Force</string>
    <string name="button_on">@string/on</string>
    <string name="button_off">@string/off</string>
    <string name="button_toggle">@string/toggle</string>

    <string name="shortcut_sync_now">Sync %1$s (%2$s)</string>
    <string name="shortcut_force_sync_now">Force sync %1$s (%2$s)</string>
    <string name="shortcut_auto_sync_on">Enable sync %1$s (%2$s)</string>
    <string name="shortcut_auto_sync_off">Disable sync %1$s (%2$s)</string>
    <string name="shortcut_auto_sync_toggle">Toggle sync %1$s (%2$s)</string>
    <string name="shortcut_sync_now_multi_select">Sync multiple accounts</string>
    <string name="shortcut_force_sync_now_multi_select">Force sync multiple accounts</string>
    <string name="shortcut_auto_sync_on_multi_select">Enable sync for multiple accounts</string>
    <string name="shortcut_auto_sync_off_multi_select">Disable sync for multiple accounts</string>
    <string name="shortcut_auto_sync_toggle_multi_select">Toggle sync for multiple accounts</string>
    <string name="shortcut_sync_master_on">Enable auto sync</string>
    <string name="shortcut_sync_master_off">Disable auto sync</string>
    <string name="shortcut_sync_master_toggle">Toggle auto sync</string>
    <string name="shortcut_sync_mutliple_authorities">multiple data</string>

    <string name="toast_account_not_found">Sync Settings: Error: Could not retrieve account</string>
    <string name="toast_an_error_occurred">Sync Settings: An error occurred</string>
    <string name="toast_broken_shortcut">Sync Settings: broken action</string>

    <string name="account_access_denied_message">Account access denied. Sync Settings needs access to your accounts to allow you to control them individually.</string>

    <string name="about_html"><![CDATA[
        <style media=\"screen\" type=\"text/css\">
            body {
                color: ?android:attr/textColorSecondary ;
            }
            h1 {
                color: ?android:attr/textColorPrimary ;
            }
            h2 {
                color: ?android:attr/colorAccent ;
            }
            a:link {
                color: ?android:attr/colorAccent ;
            }
            a:visited {
                color: ?android:attr/colorAccent ;
            }
        </style>

        <body>
        <h1>How to use</h1>
        There are two ways of using this app:
        <h2>Use the Locale API</h2>
        To use Sync Settings together with <b>Locale</b>, <b>Tasker</b>, <b>LLama</b> or a similar application that uses the Locale API, select Sync Settings as <b>action plug-in</b>.
        <h2>Create a launcher shortcut</h2>
        Some launchers allow adding application specific shortcuts from a dedicated app shortcuts screen.<br>
        Most common launchers allow adding application specific shortcuts from their widgets screen.

        <h1>Source code</h1>
        <a href="https://github.com/SpiritCroc/SyncSettings">github.com/SpiritCroc/SyncSettings</a>

        <h1>Privacy policy</h1>
        <a href="http://spiritcroc.de/android/apps/syncsettings/privacy/">spiritcroc.de/android/apps/syncsettings/privacy</a>
        </body>
    ]]></string>

</resources>
