<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/next"
        android:title="@string/action_next"
        android:icon="@drawable/ic_done_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/multi_select"
        android:checkable="true"
        android:checked="false"
        android:title="@string/action_select_multiple"
        app:showAsAction="never" />
    <item
        android:id="@+id/expand_all"
        android:title="@string/action_expand_all"
        android:icon="@drawable/ic_expand_more_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/collapse_all"
        android:title="@string/action_collapse_all"
        android:icon="@drawable/ic_expand_less_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/select_all"
        android:title="@string/action_select_all"
        android:icon="@drawable/ic_select_all_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/undo_selection"
        android:title="@string/action_undo_selection"
        android:icon="@drawable/ic_undo_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/detailed_information"
        android:checkable="true"
        android:checked="false"
        android:title="@string/action_detailed_information"
        app:showAsAction="never" />
</menu>
